# llm-council-w-search

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
backend/: council.py  main.py  prompts.py  search.py  settings.py
backend/providers/: anthropic.py  base.py  deepseek.py  google.py  mistral.py  ollama.py  openai.py  openrouter.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  CouncilGrid.jsx  SearchContext.css  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
frontend/src/components/settings/: CouncilConfig.jsx  SearchSettings.jsx
